--- a/app/index.css
+++ b/app/index.css
@@ -1,10 +1,17 @@
+@font-face {
+    font-family: 'OratorStd';
+    src: url('./OratorStd.otf') format('otf');
+    font-weight: 500;
+    font-style: normal;
+}
+
 html, body {
     margin: 0;
     padding: 0;
 
     background: #000;
 
-    font-family: sans-serif;
+    font-family: 'OratorStd',sans-serif;
 }
 
 .loader{
